--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <td>
             <h1>view keys</h1>
             <p></p>
-            <a href="https://github.com/SwimPaste/SwimPaste.github.io/keysys">keys</a>
+            <a href="https://github.com/SwimPaste/SwimPaste.github.io/check.php">keys</a>
             <p></p>
             <a href="https://github.com/SwimPaste/SwimPaste.github.io/hwidtable">hwids</a>
 </td>
