--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <td>
             <h1>view keys</h1>
             <p></p>
-            <a href="https://github.com/SwimPaste/SwimPaste.github.io/check.php">keys</a>
+            <a href="https://github.com/SwimPaste/swimpaste.github.io/blob/main/check.php">keys</a>
             <p></p>
-            <a href="https://github.com/SwimPaste/SwimPaste.github.io/hwidtable">hwids</a>
+            <a href="https://github.com/SwimPaste/swimpaste.github.io/blob/main/hwidtable">hwids</a>
 </td>
 <td width="30%">&nbsp;</td>
 </tr></table>
